[gd_scene load_steps=5 format=3 uid="uid://ct2molnfhouao"]

[ext_resource type="Texture2D" uid="uid://it8hjt58tya5" path="res://icon.svg" id="1_b340s"]
[ext_resource type="Script" path="res://src/quarter_grenade.gd" id="1_jpex4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c0u01"]
size = Vector2(12, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_rn2nc"]
radius = 63.0

[node name="QuarterGrenade" type="CharacterBody2D"]
collision_layer = 8
motion_mode = 1
script = ExtResource("1_jpex4")
speed = 300
damage = 20
knockback_force = 350
cost = 1
cooldown = 3.0
duration = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_c0u01")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_b340s")

[node name="ExplosionRadius" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionRadius"]
shape = SubResource("CircleShape2D_rn2nc")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="ExplosionRadius"]
modulate = Color(1, 0, 0, 1)
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_b340s")

[node name="ExplosionTimer" type="Timer" parent="ExplosionRadius"]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="ExplosionRadius" to="." method="_on_explosion_radius_area_entered"]
